# bloom-ide

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: copilot-instructions.md
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: fs-commands.toml  git-commands.toml  terminal-commands.toml
src-tauri/src/: lib.rs
src-tauri/src/fs/: commands.rs  error.rs  mod.rs  scope.rs  state.rs  types.rs
src-tauri/src/git/: commands.rs  error.rs  mod.rs  repository.rs  types.rs
src-tauri/src/terminal/: commands.rs  error.rs  mod.rs  state.rs  types.rs
src/components/ai/: AIAssistantPanel.tsx  ChatInput.tsx  ChatMessageBubble.tsx  ChatMessageList.tsx  CodeActions.tsx  CodeBlock.tsx  ContextBar.tsx  ConversationHistory.tsx  MarkdownContent.tsx  SuggestedPrompts.tsx
src/components/editor/: MonacoEditorPane.tsx
src/components/explorer/: FileExplorer.tsx  (+3 more)
src/data/: mockFileTree.ts
src/editor/: EditorProvider.tsx  MonacoEditor.tsx  index.ts  languageRegistry.ts  monacoSetup.ts  types.ts  useEditor.ts  useMonacoModels.ts
src/hooks/: useAutoSave.ts  useEditorShortcuts.ts  useFileTreeFilter.ts  useLLMContext.ts  useTerminalShortcuts.ts
src/stores/: aiStore.ts  editorStore.ts  scmStore.ts  settingsStore.ts  terminalStore.ts  workspaceStore.ts
src/theme/: ThemeProvider.tsx  applyTheme.ts  index.ts  initTheme.ts  monacoTheme.ts  monacoThemes.ts  themes.ts  types.ts
src/types/: ide.ts
src/utils/: fileIcons.ts  findFileById.ts
(+43 files in other folders)
