[package]
name = "app"
version = "0.1.0"
description = "BloomCode IDE"
authors = ["BloomCode"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "2"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"

# crates.io brotli 8.0.3 pins alloc-no-stdlib 2.x while brotli-decompressor uses 3.x.
# Git master widens the range so Cargo unifies on one version (fix for rustc 1.96+).
[patch.crates-io]
brotli = { git = "https://github.com/dropbox/rust-brotli", rev = "9cbed81a" }
